fixed all non test warnings